--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <div id="links">
       <center>
         <a href="./index.html">Início</a>
-        <a href="../html/sobre.html">Sobre</a>
-        <a href="../html/produtos.html">Produtos</a>
-        <a href="../html/ofertas.html">Ofertas</a>
-        <a href="../html/infantil.html">Infantil</a>
+        <a href="./html/sobre.html">Sobre</a>
+        <a href="./html/produtos.html">Produtos</a>
+        <a href="./html/ofertas.html">Ofertas</a>
+        <a href="./html/infantil.html">Infantil</a>
       </center>
       <hr />
     </div>
@@ -45,17 +45,17 @@
 
     <div id="produtos">
       <div class="camisa">
-        <a href="../html/2019.html"><img src="./Imagens/2019.png" /></a>
-        <a href="../html/2019.html"><h3>Por R$ 149,99</h3></a>
+        <a href="./html/2019.html"><img src="./Imagens/2019.png" /></a>
+        <a href="./html/2019.html"><h3>Por R$ 149,99</h3></a>
       </div>
 
       <div class="camisa">
-        <a href="../html/regata.html"><img src="./Imagens/amarela.png" />
-        <a href="../html/regata.html"><h3>Por R$ 259,99</h3></a>
+        <a href="./html/regata.html"><img src="./Imagens/amarela.png" />
+        <a href="./html/regata.html"><h3>Por R$ 259,99</h3></a>
       </div>
 
       <div class="camisa">
-        <a href="../html/2025.html"><img src="./Imagens/flamengo.png" /></a>
+        <a href="./html/2025.html"><img src="./Imagens/flamengo.png" /></a>
         <div class="riscado">
           <h3>De R$ 359,99</h3>
         </div>
@@ -69,17 +69,17 @@
       <h2>Todos os direitos reservados</h2>
 
       <div id="linksRodape">
-        <a href="../html/registrar.html">Login</a>
+        <a href="./html/registrar.html">Login</a>
 
-        <a href="../html/ofertas.html">Ofertas</a>
+        <a href="./html/ofertas.html">Ofertas</a>
 
         <a href="./index.html">Ínicio</a>
 
-        <a href="../html/sobre.html">Sobre nós</a>
+        <a href="./html/sobre.html">Sobre nós</a>
 
-        <a href="../html/produtos.html">Produtos</a>
+        <a href="./html/produtos.html">Produtos</a>
 
-        <a href="../html/infantil.html">Infantil</a>
+        <a href="./html/infantil.html">Infantil</a>
       </div>
     </div>
 
